--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-svelte-app",
+  "name": "markdown-notebook-svelte",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,22 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "sass": "^1.77.1",
     "svelte": "^4.2.12",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "bits-ui": "^0.21.7",
+    "clsx": "^2.1.1",
+    "cmdk-sv": "^0.0.17",
+    "github-markdown-css": "^5.5.1",
+    "lucide-svelte": "^0.378.0",
+    "mode-watcher": "^0.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
+    "zero-md": "^3.0.0"
   }
 }
