--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "bits-ui": "^0.21.7",
+    "@typh007/markdown-metadata": "file:../generate-metadata-of-markdown",
+    "bits-ui": "^0.21.8",
     "clsx": "^2.1.1",
     "cmdk-sv": "^0.0.17",
     "github-markdown-css": "^5.5.1",
     "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
+    "paneforge": "^0.0.4",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "zero-md": "^3.0.0"
