--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
     "paneforge": "^0.0.4",
+    "svelte-spa-router": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "zero-md": "^3.0.0"
