--- a/jsconfig.json
+++ b/jsconfig.json
@@ -26,7 +26,8 @@
     "baseUrl": ".",
     "paths": {
       "$lib": ["./src/lib"],
-      "$lib/*": ["./src/lib/*"]
+      "$lib/*": ["./src/lib/*"],
+      "$store": ["./src/store.js"]
     }
   },
   /**
